tests fixing mobile extra space bug

--- a/src/style/components/heroSection.module.css
+++ b/src/style/components/heroSection.module.css
@@ -1,6 +1,7 @@
 .hero {
   position: relative;
   background-image: url("../../assets/horse.jpg");
+  width: 100vw;
   height: 350px;
   background-position: center;
   display: flex;
